version/0.28/_sources/api/solver/_autosummary/settings/surface_integrals.rst.txt
:orphan:

.. _surface_integrals:

surface_integrals
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.surface_integrals
    :show-inheritance:

.. rubric:: Methods

======================================================================   ===============================================================

Method                                                                                                                           Summary

======================================================================   ===============================================================
:ref:`area <area_2>`                                                                                       Print total area of surfaces.

:ref:`area_weighted_avg <area_weighted_avg>`                                          Print area-weighted average of scalar on surfaces.

:ref:`vector_based_flux <vector_based_flux>`                                                             Print custom vector based flux.

:ref:`vector_flux <vector_flux>`                                                                               Print custom vector flux.

:ref:`vector_weighted_average <vector_weighted_average>`                                           Print custom vector weighted average.

:ref:`facet_avg <facet_avg>`                                                 Print average of scalar at facet centroids of the surfaces.

:ref:`facet_min <facet_min>`                                                 Print minimum of scalar at facet centroids of the surfaces.

:ref:`facet_max <facet_max>`                                                 Print maximum of scalar at facet centroids of the surfaces.

:ref:`flow_rate <flow_rate_1>`                                                               Print flow rate of scalar through surfaces.

:ref:`integral <integral>`                                                                       Print integral of scalar over surfaces.

:ref:`mass_flow_rate <mass_flow_rate_4>`                                                          Print mass flow rate through surfaces.

:ref:`mass_weighted_avg <mass_weighted_avg>`                                                 Print mass-average of scalar over surfaces.

:ref:`standard_deviation <standard_deviation>`                                                       Print standard deviation of scalar.

:ref:`sum <sum>`                                                                 Print sum of scalar at facet centroids of the surfaces.

:ref:`uniformity_index_area_weighted <uniformity_index_area_weighted>`                   Print uniformity index of scalar over surfaces.

:ref:`uniformity_index_mass_weighted <uniformity_index_mass_weighted>`                   Print uniformity index of scalar over surfaces.

:ref:`vertex_avg <vertex_avg>`                                                      Print average of scalar at vertices of the surfaces.

:ref:`vertex_min <vertex_min>`                                                      Print minimum of scalar at vertices of the surfaces.

:ref:`vertex_max <vertex_max>`                                                     Print maximkum of scalar at vertices of the surfaces.

:ref:`volume_flow_rate <volume_flow_rate>`                                                      Print volume flow rate through surfaces.

======================================================================   ===============================================================

.. rubric:: Included in:

==========================   ======================================================================================================================================================================================

Parent                                                                                                                                                                                                      Summary

==========================   ======================================================================================================================================================================================
:ref:`report_2 <report_2>`       Provides access to common settings to set up reports for your CFD simulation. Reports can be compiled for fluxes forces projected areas surface and volume integrals among others.

==========================   ======================================================================================================================================================================================

